# agentic-lab

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-2.0.txt  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: gi.yaml
.github/workflows/: docs.yml
architecture/: index.html
changelog/: index.html
concepts/: index.html
concepts/agent-card/: index.html
concepts/asl/: index.html
concepts/authorization/: index.html
concepts/behavioral-envelope/: index.html
concepts/governance-contract/: index.html
concepts/mabac/: index.html
contributing/: index.html
docs/: architecture.md  changelog.md  contributing.md  index.md
docs/concepts/: agent-card.md  asl.md  authorization.md  behavioral-envelope.md  governance-contract.md  index.md  mabac.md
docs/patterns/: adversarial.md  collaborative.md  governance-implications.md  index.md
docs/reference/: asl-schema.md  cli.md  examples.md
docs/stylesheets/: extra.css
docs/taxonomy/: communication-protocols.md  governance-levels.md  index.md  interaction-patterns.md  roles.md
docs/topologies/: deployment-targets.md  index.md  mesh.md  pyramid.md
docs/vision/: federation.md  framework-agnostic.md  gossip-dht-consensus.md  index.md
examples/: centralized_enterprise.yaml  distributed_mesh.yaml  edge_agent_workflow.yaml
patterns/: index.html
patterns/adversarial/: index.html
patterns/collaborative/: index.html
patterns/governance-implications/: index.html
reference/asl-schema/: index.html
reference/cli/: index.html
reference/examples/: index.html
search/: search_index.json
specs/: README.md
src/agent_lab/: __init__.py  cli.py  loader.py
taxonomy/: index.html
taxonomy/communication-protocols/: index.html
taxonomy/governance-levels/: index.html
taxonomy/interaction-patterns/: index.html
taxonomy/roles/: index.html
tests/: conftest.py
tests/test_cli/: test_cli.py
tests/test_generators/: test_langchain_python.py  test_registry.py
tests/test_models/: test_agents.py  test_asl.py  (+2 more)
topologies/: index.html
vision/: index.html
(+25 files in other folders)
