[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "agentic-lab"
version = "0.1.0"
description = "Declarative agentic workflow architecture and automated code/container generation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Trezbit", email = "trezbit@conjectura.net" },
]
keywords = ["agents", "agentic", "workflow", "orchestration", "code-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "jinja2>=3.1",
    "jsonschema>=4.0",
    "rich>=13.0",
]
[project.urls]
Homepage = "https://github.com/graphsentinel/agentic-lab"
Documentation = "https://github.com/graphsentinel/agentic-lab/tree/main/docs"
Repository = "https://github.com/graphsentinel/agentic-lab"
Issues = "https://github.com/graphsentinel/agentic-lab/issues"
Changelog = "https://github.com/graphsentinel/agentic-lab/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
agentlab = "agent_lab.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/agent_lab"]
core-metadata-version = "2.1"

[tool.hatch.build.targets.sdist]
core-metadata-version = "2.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
